Fix spacing around Disqus comments to match other content blocks

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4045,15 +4045,22 @@ body {
 
 #post #disqus_thread,
 #page #disqus_thread {
-  padding: 25px 40px;
-  margin-right: 10px;
-  margin-bottom: 20px;
-  margin-left: 10px;
+  padding: 10px 15px;
+  margin: 40px 2px 20px 2px;
   background-color: #ffffff;
   -webkit-border-radius: 3px;
      -moz-border-radius: 3px;
           border-radius: 3px;
   box-shadow: 0 0 0 1px rgba(187, 187, 187, 0.1), 0 6px 12px rgba(0, 0, 0, 0.1);
+}
+
+@media only screen and (min-width: 48em) {
+  #post #disqus_thread,
+  #page #disqus_thread {
+    padding: 20px 30px;
+    margin-right: 10px;
+    margin-left: 10px;
+  }
 }
 
 @media only screen and (min-width: 62.5em) {
