--- a/assets/less/page.less
+++ b/assets/less/page.less
@@ -204,13 +204,16 @@ body {
 		}
 	}
 	#disqus_thread {
-		margin-left: 10px;
-		margin-right: 10px;
-		margin-bottom: 20px;
-		padding: 25px 40px;
+		margin: 40px 2px 20px 2px;
+		padding: 10px 15px;
 		background-color: @white;
 		box-shadow: 0 0 0 1px fade(@border-color,10), 0 6px 12px fade(@black,10);
 		.rounded(3px);
+		@media @medium {
+			margin-left: 10px;
+			margin-right: 10px;
+			padding: 20px 30px;
+		}
 		@media @large {
 			max-width: 800px;
 			padding: 50px 80px;
